--- a/risk/index.html
+++ b/risk/index.html
@@ -63,8 +63,8 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/about/" title="About the scores">
-                                About the scores
+                            <a href="/about/" title="About">
+                                About
                             </a>
                         </li>
                      </ul>
@@ -146,7 +146,7 @@
               <span>1574400</span>
             </td>
             <td class="score" data-score="51">
-              <span>51%</span>
+              <span>51</span>
             </td>
           </tr>
 
@@ -189,7 +189,7 @@
               <span>3865270</span>
             </td>
             <td class="score" data-score="49">
-              <span>49%</span>
+              <span>49</span>
             </td>
           </tr>
 
@@ -231,7 +231,7 @@
               <span>118970</span>
             </td>
             <td class="score" data-score="54">
-              <span>54%</span>
+              <span>54</span>
             </td>
           </tr>
 
@@ -269,7 +269,7 @@
               <span>12790400</span>
             </td>
             <td class="score" data-score="49">
-              <span>49%</span>
+              <span>49</span>
             </td>
           </tr>
 
@@ -284,7 +284,43 @@
 </div>
 <footer id="footer">
     <div class="container">
-    </div>
+        <div class="row">
+            <div class="footer-main col-md-8">
+                <div class="footer-attribution">
+                    <p>
+                        <a href="http://opendefinition.org/ossd/" title="Open Online Software Service">
+                            <img src="http://assets.okfn.org/images/ok_buttons/os_80x15_orange_grey.png" alt=""
+                                 border=""/>
+                        </a>
+                        <a href="http://opendefinition.org/okd/" title="Open Online Software Servic">
+                            <img src="http://assets.okfn.org/images/ok_buttons/od_80x15_blue.png" alt="" border=""/>
+                        </a>
+                        <a href="http://opendefinition.org/okd/" title="Open Content">
+                            <img src="http://assets.okfn.org/images/ok_buttons/oc_80x15_blue.png" alt="" border=""/>
+                        </a>
+                        &ndash;
+                        <a href="http://creativecommons.org/licenses/by/3.0/"
+                           title="Content Licensed under a CC Attribution">Content License (Attribution)</a>
+                        &ndash;
+                        <a href="http://opendatacommons.org/licenses/pddl/1.0"
+                           title="Data License (Public Domain)">Data License (Public
+                            Domain)</a>
+                    </p>
+                </div>
+                <div class="footer-meta">
+                    <a class="naked" href="https://cybergreen.net/"><img
+                      src="/static/images/cybergreen-logo-beta.png" alt="" height="28"></a>
+                </div>
+            </div>
+            <div class="footer-links col-md-2">
+              <ul>
+                <li><a href="https://github.com/cybergreen-net/stats">Source Code</a></li>
+              </ul>
+            </div>
+            <div class="footer-links col-md-2">
+            </div>
+       </div>
+   </div>
 </footer>
 <script data-main="/static/scripts/site" src="/static/scripts/require.js"></script>
 </body>
