--- a/risk/index.html
+++ b/risk/index.html
@@ -104,7 +104,7 @@
       <tr>
         <th>Risk</th>
         <th>Description</th>
-        <th>Best and Worst</th>
+        <th>Worst</th>
         <th>Total Devices</th>
         <th>Score</th>
       </tr>
@@ -113,7 +113,7 @@
 
 
 
-          <tr data-rank="n/a" data-score="51" data-risk="">
+          <tr data-rank="n/a" data-score="49" data-risk="">
             <td class="risks-risk-col">
               <a href="/risk/openntp/" title="Open NTP">
                 Open NTP
@@ -124,69 +124,28 @@
 <p>Since NTP runs over <a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a>, it is also vulnerable to reflective UDP amplification ...</p> <a href="/risk/openntp">Read more</a>
             </td>
             <td>
-                <span class="score score-top" data-score="81.88">81.88</span>
-                <a href="/place/anguilla/openntp/">Anguilla</a>&nbsp;
-                <a href="/place/burkina-faso/openntp/">Burkina Faso</a>&nbsp;
-                <a href="/place/benin/openntp/">Benin</a>&nbsp;
-                <a href="/place/bes-islands/openntp/">Bonaire, Sint Eustatius and Saba</a>&nbsp;
-                <a href="/place/guernsey/openntp/">Guernsey</a>&nbsp;
-                <a href="/place/guinea/openntp/">Guinea</a>&nbsp;
-                <a href="/place/lesotho/openntp/">Lesotho</a>&nbsp;
-                <a href="/place/mauritania/openntp/">Mauritania</a>&nbsp;
-                <a href="/place/montserrat/openntp/">Montserrat</a>&nbsp;
-                <a href="/place/niger/openntp/">Niger</a>&nbsp;
-                <a href="/place/saint-pierre/openntp/">Saint Pierre and Miquelon</a>&nbsp;
-                <a href="/place/south-sudan/openntp/">South Sudan</a>&nbsp;
-                <a href="/place/sint-maarten/openntp/">Dutch Sint Maarten</a>&nbsp;
-            <br>
-		<span class="score score-bottom" data-score="0.0">0.0</span>
+                <span class="score score-top" data-score="100.0">100.0</span>
                 <a href="/place/united-states/openntp/">United States</a>&nbsp;
+              <!--
+              <br />
+                  <span class="score score-bottom" data-score="18.12">18.12</span>
+                      <a href="/place/anguilla/openntp/">Anguilla</a>&nbsp;
+                      <a href="/place/burkina-faso/openntp/">Burkina Faso</a>&nbsp;
+                      <a href="/place/benin/openntp/">Benin</a>&nbsp;
+                      <a href="/place/bes-islands/openntp/">Bonaire, Sint Eustatius and Saba</a>&nbsp;
+                      <a href="/place/guernsey/openntp/">Guernsey</a>&nbsp;
+                      <a href="/place/guinea/openntp/">Guinea</a>&nbsp;
+                      <a href="/place/lesotho/openntp/">Lesotho</a>&nbsp;
+                      <a href="/place/mauritania/openntp/">Mauritania</a>&nbsp;
+                      <a href="/place/montserrat/openntp/">Montserrat</a>&nbsp;
+                      <a href="/place/niger/openntp/">Niger</a>&nbsp;
+                      <a href="/place/saint-pierre/openntp/">Saint Pierre and Miquelon</a>&nbsp;
+                      <a href="/place/south-sudan/openntp/">South Sudan</a>&nbsp;
+                      <a href="/place/sint-maarten/openntp/">Dutch Sint Maarten</a>&nbsp;
+              -->
             </td>
             <td class="total">
               <span>1574400</span>
-            </td>
-            <td class="score" data-score="51">
-              <span>51</span>
-            </td>
-          </tr>
-
-
-
-
-
-          <tr data-rank="n/a" data-score="49" data-risk="">
-            <td class="risks-risk-col">
-              <a href="/risk/opendns/" title="Open DNS">
-                Open DNS
-              </a>
-            </td>
-            <td>
-              <p>The Domain Name System (DNS) is pervasive. Collectively, we use it billions of times a day, often without even knowing that it exists. For enterprises, it's their digital identity as well as a critical component of their security architecture. In short: DNS is pervasive and there are many DNS servers on the Internet. Since DNS runs on the ...</p> <a href="/risk/opendns">Read more</a>
-            </td>
-            <td>
-                <span class="score score-top" data-score="82.55">82.55</span>
-                <a href="/place/american-samoa/opendns/">American Samoa</a>&nbsp;
-                <a href="/place/aruba/opendns/">Aruba</a>&nbsp;
-                <a href="/place/aland-islands/opendns/">Aland Islands</a>&nbsp;
-                <a href="/place/burundi/opendns/">Burundi</a>&nbsp;
-                <a href="/place/bes-islands/opendns/">Bonaire, Sint Eustatius and Saba</a>&nbsp;
-                <a href="/place/micronesia/opendns/">Micronesia</a>&nbsp;
-                <a href="/place/guinea/opendns/">Guinea</a>&nbsp;
-                <a href="/place/comoros/opendns/">Comoros</a>&nbsp;
-                <a href="/place/north-korea/opendns/">North Korea</a>&nbsp;
-                <a href="/place/liberia/opendns/">Liberia</a>&nbsp;
-                <a href="/place/saint-martin/opendns/">French Saint Martin</a>&nbsp;
-                <a href="/place/marshall-islands/opendns/">Marshall Islands</a>&nbsp;
-                <a href="/place/mali/opendns/">Mali</a>&nbsp;
-                <a href="/place/niger/opendns/">Niger</a>&nbsp;
-                <a href="/place/sierra-leone/opendns/">Sierra Leone</a>&nbsp;
-                <a href="/place/samoa/opendns/">Samoa</a>&nbsp;
-            <br>
-		<span class="score score-bottom" data-score="0.0">0.0</span>
-                <a href="/place/united-states/opendns/">United States</a>&nbsp;
-            </td>
-            <td class="total">
-              <span>3865270</span>
             </td>
             <td class="score" data-score="49">
               <span>49</span>
@@ -197,7 +156,52 @@
 
 
 
-          <tr data-rank="n/a" data-score="54" data-risk="">
+          <tr data-rank="n/a" data-score="51" data-risk="">
+            <td class="risks-risk-col">
+              <a href="/risk/opendns/" title="Open DNS">
+                Open DNS
+              </a>
+            </td>
+            <td>
+              <p>The Domain Name System (DNS) is pervasive. Collectively, we use it billions of times a day, often without even knowing that it exists. For enterprises, it's their digital identity as well as a critical component of their security architecture. In short: DNS is pervasive and there are many DNS servers on the Internet. Since DNS runs on the ...</p> <a href="/risk/opendns">Read more</a>
+            </td>
+            <td>
+                <span class="score score-top" data-score="100.0">100.0</span>
+                <a href="/place/united-states/opendns/">United States</a>&nbsp;
+              <!--
+              <br />
+                  <span class="score score-bottom" data-score="17.45">17.45</span>
+                      <a href="/place/american-samoa/opendns/">American Samoa</a>&nbsp;
+                      <a href="/place/aruba/opendns/">Aruba</a>&nbsp;
+                      <a href="/place/aland-islands/opendns/">Aland Islands</a>&nbsp;
+                      <a href="/place/burundi/opendns/">Burundi</a>&nbsp;
+                      <a href="/place/bes-islands/opendns/">Bonaire, Sint Eustatius and Saba</a>&nbsp;
+                      <a href="/place/micronesia/opendns/">Micronesia</a>&nbsp;
+                      <a href="/place/guinea/opendns/">Guinea</a>&nbsp;
+                      <a href="/place/comoros/opendns/">Comoros</a>&nbsp;
+                      <a href="/place/north-korea/opendns/">North Korea</a>&nbsp;
+                      <a href="/place/liberia/opendns/">Liberia</a>&nbsp;
+                      <a href="/place/saint-martin/opendns/">French Saint Martin</a>&nbsp;
+                      <a href="/place/marshall-islands/opendns/">Marshall Islands</a>&nbsp;
+                      <a href="/place/mali/opendns/">Mali</a>&nbsp;
+                      <a href="/place/niger/opendns/">Niger</a>&nbsp;
+                      <a href="/place/sierra-leone/opendns/">Sierra Leone</a>&nbsp;
+                      <a href="/place/samoa/opendns/">Samoa</a>&nbsp;
+              -->
+            </td>
+            <td class="total">
+              <span>3865270</span>
+            </td>
+            <td class="score" data-score="51">
+              <span>51</span>
+            </td>
+          </tr>
+
+
+
+
+
+          <tr data-rank="n/a" data-score="46" data-risk="">
             <td class="risks-risk-col">
               <a href="/risk/spam/" title="Spam">
                 Spam
@@ -207,31 +211,33 @@
               <p>Spam is roughly equivalent to unsolicited telephone marketing calls, except that the user pays for part of the message since everyone shares the cost of maintaining the Internet. Spammers typically send a piece of e-mail to a distribution list in the millions, expecting that only a tiny number of readers will respond to their offer. It has become a major problem for all Internet ...</p> <a href="/risk/spam">Read more</a>
             </td>
             <td>
-                <span class="score score-top" data-score="77.6">77.6</span>
-                <a href="/place/bes-islands/spam/">Bonaire, Sint Eustatius and Saba</a>&nbsp;
-                <a href="/place/bahamas/spam/">Bahamas</a>&nbsp;
-                <a href="/place/kiribati/spam/">Kiribati</a>&nbsp;
-                <a href="/place/laos/spam/">Laos</a>&nbsp;
-                <a href="/place/liberia/spam/">Liberia</a>&nbsp;
-                <a href="/place/luxembourg/spam/">Luxembourg</a>&nbsp;
-                <a href="/place/mali/spam/">Mali</a>&nbsp;
-                <a href="/place/malta/spam/">Malta</a>&nbsp;
-                <a href="/place/maldives/spam/">Maldives</a>&nbsp;
-                <a href="/place/malawi/spam/">Malawi</a>&nbsp;
-                <a href="/place/new-caledonia/spam/">New Caledonia</a>&nbsp;
-                <a href="/place/new-zealand/spam/">New Zealand</a>&nbsp;
-                <a href="/place/seychelles/spam/">Seychelles</a>&nbsp;
-                <a href="/place/slovenia/spam/">Slovenia</a>&nbsp;
-                <a href="/place/syria/spam/">Syria</a>&nbsp;
-            <br>
-		<span class="score score-bottom" data-score="0.0">0.0</span>
+                <span class="score score-top" data-score="100.0">100.0</span>
                 <a href="/place/hungary/spam/">Hungary</a>&nbsp;
+              <!--
+              <br />
+                  <span class="score score-bottom" data-score="22.4">22.4</span>
+                      <a href="/place/bes-islands/spam/">Bonaire, Sint Eustatius and Saba</a>&nbsp;
+                      <a href="/place/bahamas/spam/">Bahamas</a>&nbsp;
+                      <a href="/place/kiribati/spam/">Kiribati</a>&nbsp;
+                      <a href="/place/laos/spam/">Laos</a>&nbsp;
+                      <a href="/place/liberia/spam/">Liberia</a>&nbsp;
+                      <a href="/place/luxembourg/spam/">Luxembourg</a>&nbsp;
+                      <a href="/place/mali/spam/">Mali</a>&nbsp;
+                      <a href="/place/malta/spam/">Malta</a>&nbsp;
+                      <a href="/place/maldives/spam/">Maldives</a>&nbsp;
+                      <a href="/place/malawi/spam/">Malawi</a>&nbsp;
+                      <a href="/place/new-caledonia/spam/">New Caledonia</a>&nbsp;
+                      <a href="/place/new-zealand/spam/">New Zealand</a>&nbsp;
+                      <a href="/place/seychelles/spam/">Seychelles</a>&nbsp;
+                      <a href="/place/slovenia/spam/">Slovenia</a>&nbsp;
+                      <a href="/place/syria/spam/">Syria</a>&nbsp;
+              -->
             </td>
             <td class="total">
               <span>118970</span>
             </td>
-            <td class="score" data-score="54">
-              <span>54</span>
+            <td class="score" data-score="46">
+              <span>46</span>
             </td>
           </tr>
 
@@ -239,7 +245,7 @@
 
 
 
-          <tr data-rank="n/a" data-score="49" data-risk="">
+          <tr data-rank="n/a" data-score="51" data-risk="">
             <td class="risks-risk-col">
               <a href="/risk/openssdp/" title="Open SSDP">
                 Open SSDP
@@ -251,25 +257,27 @@
 <p>SSDP's amplification factor ...</p> <a href="/risk/openssdp">Read more</a>
             </td>
             <td>
-                <span class="score score-top" data-score="84.38">84.38</span>
-                <a href="/place/saint-barthelemy/openssdp/">Saint Barthelemy</a>&nbsp;
-                <a href="/place/djibouti/openssdp/">Djibouti</a>&nbsp;
-                <a href="/place/eritrea/openssdp/">Eritrea</a>&nbsp;
-                <a href="/place/faroe-islands/openssdp/">Faroe Islands</a>&nbsp;
-                <a href="/place/north-korea/openssdp/">North Korea</a>&nbsp;
-                <a href="/place/monaco/openssdp/">Monaco</a>&nbsp;
-                <a href="/place/somalia/openssdp/">Somalia</a>&nbsp;
-                <a href="/place/south-sudan/openssdp/">South Sudan</a>&nbsp;
-                <a href="/place/sao-tome-and-principe/openssdp/">Sao Tome and Principe</a>&nbsp;
-            <br>
-		<span class="score score-bottom" data-score="0.0">0.0</span>
+                <span class="score score-top" data-score="100.0">100.0</span>
                 <a href="/place/china/openssdp/">China</a>&nbsp;
+              <!--
+              <br />
+                  <span class="score score-bottom" data-score="15.62">15.62</span>
+                      <a href="/place/saint-barthelemy/openssdp/">Saint Barthelemy</a>&nbsp;
+                      <a href="/place/djibouti/openssdp/">Djibouti</a>&nbsp;
+                      <a href="/place/eritrea/openssdp/">Eritrea</a>&nbsp;
+                      <a href="/place/faroe-islands/openssdp/">Faroe Islands</a>&nbsp;
+                      <a href="/place/north-korea/openssdp/">North Korea</a>&nbsp;
+                      <a href="/place/monaco/openssdp/">Monaco</a>&nbsp;
+                      <a href="/place/somalia/openssdp/">Somalia</a>&nbsp;
+                      <a href="/place/south-sudan/openssdp/">South Sudan</a>&nbsp;
+                      <a href="/place/sao-tome-and-principe/openssdp/">Sao Tome and Principe</a>&nbsp;
+              -->
             </td>
             <td class="total">
               <span>12790400</span>
             </td>
-            <td class="score" data-score="49">
-              <span>49</span>
+            <td class="score" data-score="51">
+              <span>51</span>
             </td>
           </tr>
 
