--- a/about/index.html
+++ b/about/index.html
@@ -115,7 +115,9 @@
 <li>We take a logarithm of the numbers of affected devices. We do this because the distribution of these numbers is very broad, with a lot of small values and some very large ones. If you do simple division you “bunch” up low numbers to very high scores (lots of places are near 100). Logging helps to “spread” scores out.</li>
 <li>Get the score between 0 and 1 by dividing by ln(max devices)</li>
 <li>Multiply by a 100 to get a score within the range 0-100</li>
-</ul>            </div>
+</ul>
+<h1>Data sources and acknowledgements</h1>
+<p>We would like to thank Jared Mauch and the <a href="http://openntpproject.org/">openntpproject.org</a> and <a href="http://openresolverproject.org/">openresolver project</a> who graciously gave us access to his scanning data.</p>            </div>
         </div>
     </div>
 </div>
