--- a/download/index.html
+++ b/download/index.html
@@ -94,7 +94,7 @@
     <h1>Aggregated data format</h1>
 <p>We currently provide full data dumps of our aggregated data sets.
 The format is:</p>
-<p>`` risk,place (country),year,count,score,rank ```</p>
+<p><code>risk,place (country),year,count,score,rank</code></p>
 <p>In addition to the above CSV format, we also provide a JSON download.</p>
     </div>
   <div class="col-md-4">
