--- a/download/index.html
+++ b/download/index.html
@@ -93,7 +93,7 @@
     <div class="col-md-12">
     <h1>Aggregated data format</h1>
 <p>We currently provide full data dumps of our aggregated data sets.
-The format is:</p>
+The CSV format is:</p>
 <p><code>risk,place (country),year,count,score,rank</code></p>
 <p>In addition to the above CSV format, we also provide a JSON download.</p>
     </div>
